--- a/assets/mixins.scss
+++ b/assets/mixins.scss
@@ -43,3 +43,93 @@
 
   @return $number;
 }
+
+@mixin keep-ratio($ratio: '1/1') {
+  position: relative;
+  overflow: hidden;
+
+  &::before {
+      content: '';
+      display: block;
+      width: 100%;
+
+      @if ($ratio) {
+          $ratio1: str-slice($ratio, 1, (str-index($ratio, '/') - 1));
+          $ratio2: str-slice($ratio, (str-index($ratio, '/') + 1));
+
+          padding-top: (to-number($ratio2) / to-number($ratio1)) * 100%;
+      }
+  }
+
+  & > * {
+      position: absolute;
+  }
+
+  & > img,
+  & > figure,
+  & > picture,
+  & > iframe,
+  & > video {
+      top: 0;
+      left: 0;
+      right: 0;
+      bottom: 0;
+      width: 100%;
+      height: 100%;
+  }
+}
+
+// Do your Math!
+// --------------------------------------------------------------------------
+
+@function sqrt($number) {
+  $x0: 1;
+  $x1: $x0;
+  @for $i from 1 through 10 {
+      $x1: $x0 - ($x0 * $x0 - abs($number)) / (2 * $x0);
+      $x0: $x1;
+  }
+  @return $x1;
+}
+
+@function pow($number, $exponent) {
+  $x0: 1;
+  $number: $x0 * $number;
+  @if $exponent > 0 {
+      @for $i from 1 through $exponent {
+          $x0: $x0 * $number;
+      }
+  }
+  @return $x0;
+}
+
+// Cast a string to a number
+// --------------------------------------------------------------------------
+
+@function to-number($value) {
+  @if type-of($value) == 'number' {
+    @return $value;
+  } @else if type-of($value) != 'string' {
+    $_: log('Value for `to-number` should be a number or a string.');
+  }
+
+  $result: 0;
+  $digits: 0;
+  $minus: str-slice($value, 1, 1) == '-';
+  $numbers: ('0': 0, '1': 1, '2': 2, '3': 3, '4': 4, '5': 5, '6': 6, '7': 7, '8': 8, '9': 9);
+
+  @for $i from if($minus, 2, 1) through str-length($value) {
+    $character: str-slice($value, $i, $i);
+
+    @if $character == '.' {
+      $digits: 1;
+    } @else if $digits == 0 {
+      $result: $result * 10 + map-get($numbers, $character);
+    } @else {
+      $digits: $digits * 10;
+      $result: $result + map-get($numbers, $character) / $digits;
+    }
+  }
+
+  @return if($minus, -$result, $result);
+}
