--- a/assets/illustrations.scss
+++ b/assets/illustrations.scss
@@ -9,18 +9,15 @@
   left: 0;
   background-repeat: no-repeat;
   background-position: center;
-  background-size: contain;
+  background-image: url(/ajax-loader-reverse.gif);
   background-color: rgba(0, 0, 0, 0.95);
-  transition: opacity 300ms ease-in-out 100ms;
+  transition: opacity 400ms;
   opacity: 0;
   &.open {
     display: block;
     height: 100vh;
     bottom: 0;
     opacity: 1;
-  }
-  &.slide {
-    opacity: 0;
   }
 }
 
@@ -31,28 +28,65 @@
   right: 0;
   left: 0;
   bottom: 0;
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: contain;
+  transition: all 200ms;
+  opacity: 1;
+  width: 100%;
+  display: block;
+
+  &.loading,
+  .lightbox.slide & {
+    width: 1px;
+    left: 50vw;
+    top: 50vh;
+    opacity: 0;
+  }
 }
 
 .lightbox__prev,
 .lightbox__next {
-  width: 50px;
-  height: 50px;
-  background: #fff;
+  width: 44px;
+  height: 44px;
   position: fixed;
   top: 50%;
   z-index: 30;
-  margin-top: -25px;
+  margin-top: -22px;
+  transition: all 400ms;
+  opacity: 1;
+
+  .lightbox.slide & {
+    opacity: 0;
+  }
+
+  svg {
+    width: 100%;
+    height: 100%;
+
+    polygon,
+    path {
+      fill: #fff;
+      box-shadow: 0px 0px 5px 3px rgba(0, 0, 0, 0.75);
+    }
+  }
 }
 .lightbox__prev {
-  left: 0;
+  left: 20px;
+  .lightbox.slide & {
+    left: -100px;
+  }
 }
 
 .lightbox__next {
-  right: 0;
+  right: 20px;
+  .lightbox.slide & {
+    right: -100px;
+  }
 }
 
 .lightbox__title {
-  position: relative;
+  position: absolute;
   z-index: 19;
   background: #000;
   color: #fff;
@@ -60,6 +94,16 @@
   padding: 12px 20px 5px;
   font-family: Bebas Neue;
   font-size: 1.6rem;
+  transition: all 400ms;
+  opacity: 1;
+  display: block;
+  left: 0;
+
+  .lightbox.slide & {
+    left: -100%;
+    opacity: 0;
+    display: none;
+  }
 }
 
 .closeicon {
@@ -68,6 +112,7 @@
   position: fixed;
   top: 12px;
   right: 20px;
+  z-index: 30;
 
   path {
     fill: #fff;
@@ -115,7 +160,32 @@
   break-inside: avoid;
 }
 
+.list-complete-item__loader {
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  transition: opacity 400ms;
+  background-repeat: no-repeat;
+  background-position: center;
+  background-color: #ffffff;
+  background-image: url(/ajax-loader.gif);
+  opacity: 0;
+  
+  .list-complete-enter &,
+  .preloading & {
+    opacity: 1;
+  }
+
+  .loading & {
+    opacity: 0.9;
+  }
+}
+
 .list-complete-img {
+  position: relative;
+  z-index: 1;
   background-size: cover;
   background-position: center;
   width: 100%;
