--- a/assets/subnav.scss
+++ b/assets/subnav.scss
@@ -1,79 +1,94 @@
+@keyframes slideInFromTop {
+  0% {
+    transform: translateY(-100%);
+  }
+  100% {
+    transform: translateY(0);
+  }
+}
+
 .subnav {
-    color: #fff;
-    padding: 0 20px;
-    width: 100%;
-    transition: all 500ms;
-  
-    @include mq(above-bp) {
-      position: fixed;
-      z-index: 10;
-      top: 50px;
-      background: rgba(0, 0, 0, 0);
-  
+  color: #fff;
+  padding: 0 20px;
+  width: 100%;
+  transition: all 500ms;
+
+  @include mq(above-bp) {
+    position: fixed;
+    z-index: 10;
+    top: 50px;
+    background: rgba(0, 0, 0, 0);
+
+    li button:not(:focus) {
+      opacity: 0.4;
+    }
+
+    &:hover {
+      background: rgba(0, 0, 0, 0.8);
+
       li button:not(:focus) {
-        opacity: 0.4;
-      }
-  
-      &:hover {
-        background: rgba(0, 0, 0, 0.8);
-  
-        li button:not(:focus) {
-          opacity: 1;
-        }
-      }
-    }
-  
-    ul {
-      width: 100%;
-      height: 100%;
-      display: flex;
-      align-items: center;
-      justify-content: space-evenly;
-      flex-wrap: wrap;
-      padding-left: 0;
-      padding-top: 10px;
-      padding-bottom: 10px;
-  
-      @include mq(above-bp) {
-        justify-content: flex-end;
-      }
-  
-      li {
-        display: inline-flex;
-        align-items: center;
-        outline: none !important;
-        @include mq(above-bp) {
-          height: 30px;
-          margin-right: 7px;
-        }
-      }
-    }
-  
-    button {
-      background: #333;
-      padding: 5px 10px;
-      border-radius: 3px;
-      border: none;
-      color: #aaa;
-      font-size: 13px;
-      letter-spacing: 1px;
-      cursor: pointer;
-      outline: none !important;
-      margin: 3px;
-  
-      @include mq(above-bp) {
-        background: #111;
-        margin: 0;
-      }
-  
-      &:hover {
-        background: #000;
-      }
-  
-      &:focus {
-        background: #000;
-        color: #fff;
-        text-shadow: 0px 0px 5px #000000;
+        opacity: 1;
       }
     }
   }
+
+  ul {
+    width: 100%;
+    height: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: space-evenly;
+    flex-wrap: wrap;
+    padding-left: 0;
+    padding-top: 10px;
+    padding-bottom: 10px;
+    position: relative;
+    animation: 1s ease-out 100ms 1 slideInFromTop;
+
+    @include mq(above-bp) {
+      justify-content: flex-end;
+    }
+
+    li {
+      animation: 1s ease-out 100ms 1 slideInFromTop;
+      display: inline-flex;
+      align-items: center;
+      outline: none !important;
+      transition: all 500ms;
+      opacity: 1;
+
+      @include mq(above-bp) {
+        height: 30px;
+        margin-right: 7px;
+      }
+    }
+  }
+
+  button {
+    background: #333;
+    padding: 5px 10px;
+    border-radius: 3px;
+    border: none;
+    color: #aaa;
+    font-size: 13px;
+    letter-spacing: 1px;
+    cursor: pointer;
+    outline: none !important;
+    margin: 3px;
+
+    @include mq(above-bp) {
+      background: #111;
+      margin: 0;
+    }
+
+    &:hover {
+      background: #000;
+    }
+
+    &:focus {
+      background: #000;
+      color: #fff;
+      text-shadow: 0px 0px 5px #000000;
+    }
+  }
+}
