need to review queryselects into refs

--- a/assets/subnav.scss
+++ b/assets/subnav.scss
@@ -12,17 +12,18 @@
   padding: 0 20px;
   width: 100%;
   transition: all 500ms;
+  position: fixed;
+  z-index: 10;
+  top: 50px;
+  background: #000;
+  background: linear-gradient(0deg, rgba(0,0,0,0) 10%, rgba(0,0,0,1) 50%);
+  padding-bottom:40px;
 
   @include mq(above-bp) {
-    position: fixed;
-    z-index: 10;
-    top: 50px;
     background: rgba(0, 0, 0, 0);
-
     li button:not(:focus) {
       opacity: 0.4;
     }
-
     &:hover {
       background: rgba(0, 0, 0, 0.8);
 
@@ -37,7 +38,7 @@
     height: 100%;
     display: flex;
     align-items: center;
-    justify-content: space-evenly;
+    justify-content: center;
     flex-wrap: wrap;
     padding-left: 0;
     padding-top: 10px;
@@ -65,11 +66,12 @@
   }
 
   button {
-    background: #333;
+    background: #fff;
     padding: 5px 10px;
     border-radius: 3px;
     border: none;
-    color: #aaa;
+    color: #000;
+    font-weight:bold;
     font-size: 13px;
     letter-spacing: 1px;
     cursor: pointer;
@@ -78,6 +80,7 @@
 
     @include mq(above-bp) {
       background: #111;
+      color: #aaa;
       margin: 0;
     }
 
