--- a/assets/subnav.scss
+++ b/assets/subnav.scss
@@ -16,8 +16,11 @@
   z-index: 10;
   top: 50px;
   background: #000;
-  background: linear-gradient(0deg, rgba(0,0,0,0) 10%, rgba(0,0,0,1) 50%);
-  padding-bottom:40px;
+  background: linear-gradient(0deg, rgba(0, 0, 0, 0) 10%, rgba(0, 0, 0, 1) 50%);
+
+  @include mq(below-bp) {
+    padding-bottom: 40px;
+  }
 
   @include mq(above-bp) {
     background: rgba(0, 0, 0, 0);
@@ -71,7 +74,7 @@
     border-radius: 3px;
     border: none;
     color: #000;
-    font-weight:bold;
+    font-weight: bold;
     font-size: 13px;
     letter-spacing: 1px;
     cursor: pointer;
