--- a/assets/illustrations.scss
+++ b/assets/illustrations.scss
@@ -63,11 +63,11 @@
   svg {
     width: 100%;
     height: 100%;
+    filter: drop-shadow( 3px 3px 2px rgba(0, 0, 0, .7));
 
     polygon,
     path {
       fill: #fff;
-      box-shadow: 0px 0px 5px 3px rgba(0, 0, 0, 0.75);
     }
   }
 }
@@ -87,7 +87,7 @@
 
 .lightbox__title {
   position: absolute;
-  z-index: 19;
+  z-index: 49;
   background: #000;
   color: #fff;
   display: inline-block;
@@ -113,10 +113,10 @@
   top: 12px;
   right: 20px;
   z-index: 30;
-
+  filter: drop-shadow( 3px 3px 2px rgba(0, 0, 0, .7));
+  
   path {
     fill: #fff;
-    box-shadow: 0px 0px 5px 3px rgba(0, 0, 0, 0.75);
   }
 }
 
