--- a/assets/content.scss
+++ b/assets/content.scss
@@ -1,12 +1,12 @@
 .content {
-    margin: 10px auto 20px;
+    margin: 0 auto 20px;
     max-width: 800px;
-    padding: 20px 20px 40px;
+    padding: 100px 20px 40px;
     background: white;
 
-    @include mq(above-bp) {
-        padding: 50px 50px 70px;
-        margin: 30px auto 50px;
+    @include mq(above-650px) {
+        padding: 40px 50px 70px;
+        margin: 0 auto 50px;
     }
 }
 
